--- a/styles.css
+++ b/styles.css
@@ -294,6 +294,11 @@
     text-decoration-line: none;
 }
 
+/** Cancel overflow of .no-overflow */
+.block_xp .xp-cancel-overflow .no-overflow {
+    overflow: visible;
+}
+
 /** Legacy styles. */
 .block_xp-level {
     background: url([[pix:block_xp|10]]) no-repeat;
